tests/kulezi_tests/good/lazy_bool.lat
int main() {
    boolean x = false;
    boolean y = true;
    if (x || (y && true)) {
        return 1;
    }

    if (x && (y || x && true) || false) {
        return 2;
    }

    return 0;
}