tests/kulezi_tests/bad/incorrect_field01.lat
class C {
    int x;
}

int main() {
    int y;
    int z;
    C x = new C;
    x.x = 1;
    x.y = 2;
    x.z = 3;
    return 0;
}